changed fontsize to fix profile text overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -318,6 +318,7 @@ body{
 	
 	}
 	#profile-info{
+		font-size: 10px;
 		position: relative;
 		right: 85vw;
 		label{
